--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -244,7 +244,6 @@ button:hover,
 button:focus,
 .offcanvas-is-open button {
   background-color: var(--textColor);
-  color: var(--backgroundColor);
   border-color: var(--textColor);
 }
 
@@ -275,6 +274,26 @@ main {
   color: var(--magenta-300);
 }
 
+.wave-hand {
+  animation: wave 1s ease 1s 5 reverse paused;
+
+  // Short-Hand Syntax
+  // animation: name duration timing-function delay iteration-count direction fill-mode play-state;
+
+  // Long-Hand Syntax
+  // animation-name: name; // this is the name of the animation, which is same name you create with @keyframes.
+  // animation-duration: duration; // this is the duration of the animation. It is written in seconds as such 3s (3 seconds).
+  // animation-timing-function: timing-function; // this is the timing-function used for the animation. It the same as transition-timing-function (linear, ease, ease-in, ease-out, ease-in-out, cubic-bezier)
+  // animation-delay: duration; // this is the duration to wait (delay in seconds) before the animation starts. This delay is also applied every time the animation repeats.
+  // animation-iteration-count: count; // this determines how many times the animation should repeat. If you want the animation to loop infinitely (until you say stop), use infinite.
+  // animation-direction: direction; // this is the direction (normal, reverse, alternate, alternate-reverse) of the animation. normal: starts at 0% and ends at 100%, reverse: starts at 100% and ends at 0%, alternate: Every odd iteration starts at 0% and ends at 100%. Every even iteration starts at 100% and ends at 0%, alternate-reverse: Every odd iteration starts at 100% and ends at 0%; every even iteration starts at 0% and ends at 100%. // See this here: https://codepen.io/zellwk/pen/eGxBWP?editors=1100.
+  // animation-fill-mode: fill-mode; // this tells CSS what to do when the animation ends.
+  // animation-play-state: play-state; // this determines whether the animation is playing or paused (paused, running).
+  &:hover {
+    animation-play-state: running;
+  }
+}
+
 /**
  * Modal
  */
@@ -291,6 +310,8 @@ main {
   right: 0;
   opacity: 0;
   z-index: -1;
+  transition: opacity 0.5s ease-in;
+  // transition: opacity 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .modal-is-open .modal-overlay {
   opacity: 1;
@@ -307,6 +328,24 @@ main {
   color: #fff;
   min-width: 50vmin;
   min-height: 50vmin;
+}
+
+@keyframes wave {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: scale(1.1) rotate(-45deg);
+  }
+  50% {
+    transform: scale(1.3) rotate(45deg);
+  }
+  75% {
+    transform: scale(1.1) rotate(-45deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 .modal__close-button {
@@ -343,6 +382,7 @@ main {
   border-radius: 4px;
   background-color: var(--magenta-300);
   color: #fff;
+  transition: background-color 0.5s ease-out;
 }
 
 .button:hover,
