--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -189,12 +189,25 @@ a:active {
 }
 
 /* Accordion content */
-.accordion.is-open .accordion__content {
-  display: grid;
+.accordion__content {
+  height: 0;
+  overflow: hidden;
+  transition: height 0.3s ease-out;
+  svg {
+    position: relative;
+    transition: top 0.3s ease-out, opacity 0.3s ease-out;
+    opacity: 0;
+    top: -50px;
+  }
+  p {
+    position: relative;
+    left: 150px;
+    transition: left 0.3s ease-out;
+  }
 }
 
-.accordion__content {
-  display: none;
+.accordion__inner {
+  display: grid;
   grid-template-columns: 7.5em 1fr;
   grid-column-gap: 1.5em;
   align-items: center;
@@ -222,6 +235,7 @@ a:active {
   left: -14rem;
   width: 14rem;
   background-color: var(--menuBackgroundColor);
+  transition: transform 0.3s ease-in;
 }
 
 /**
@@ -231,6 +245,7 @@ a:active {
   padding-top: 3rem;
   padding-left: 2.5rem;
   max-width: 33rem;
+  transition: transform 0.3s ease-in;
 }
 
 /**
@@ -238,13 +253,6 @@ a:active {
  */
 button {
   border: 2px solid currentColor;
-}
-
-button:hover,
-button:focus,
-.offcanvas-is-open button {
-  background-color: var(--textColor);
-  border-color: var(--textColor);
 }
 
 main {
@@ -263,36 +271,73 @@ main {
  * START EDITING HERE
  * ==================
  */
+
+@keyframes point {
+  0% {
+    transform: translateY(3em);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .point-hand {
   position: absolute;
   left: 0;
   right: 0;
   max-width: 3em;
   margin-top: 1em;
-  margin-right: auto;
-  margin-left: auto;
+  margin-left: 1em;
   color: var(--magenta-300);
+  animation: point 1s cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 
-.wave-hand {
-  animation: wave 1s ease 1s 5 reverse paused;
+// @keyframes wave {
+//   0% {
+//     transform: rotate(0deg);
+//   }
+//   25% {
+//     transform: scale(1.1) rotate(15deg);
+//   }
+//   50% {
+//     transform: scale(1.3) rotate(-15deg);
+//   }
+//   75% {
+//     transform: scale(1.1) rotate(15deg);
+//   }
+//   100% {
+//     transform: rotate(0deg);
+//   }
+// }
 
-  // Short-Hand Syntax
-  // animation: name duration timing-function delay iteration-count direction fill-mode play-state;
+// Short-Hand Syntax
+// animation: name duration timing-function delay iteration-count direction fill-mode play-state;
 
-  // Long-Hand Syntax
-  // animation-name: name; // this is the name of the animation, which is same name you create with @keyframes.
-  // animation-duration: duration; // this is the duration of the animation. It is written in seconds as such 3s (3 seconds).
-  // animation-timing-function: timing-function; // this is the timing-function used for the animation. It the same as transition-timing-function (linear, ease, ease-in, ease-out, ease-in-out, cubic-bezier)
-  // animation-delay: duration; // this is the duration to wait (delay in seconds) before the animation starts. This delay is also applied every time the animation repeats.
-  // animation-iteration-count: count; // this determines how many times the animation should repeat. If you want the animation to loop infinitely (until you say stop), use infinite.
-  // animation-direction: direction; // this is the direction (normal, reverse, alternate, alternate-reverse) of the animation. normal: starts at 0% and ends at 100%, reverse: starts at 100% and ends at 0%, alternate: Every odd iteration starts at 0% and ends at 100%. Every even iteration starts at 100% and ends at 0%, alternate-reverse: Every odd iteration starts at 100% and ends at 0%; every even iteration starts at 0% and ends at 100%. // See this here: https://codepen.io/zellwk/pen/eGxBWP?editors=1100.
-  // animation-fill-mode: fill-mode; // this tells CSS what to do when the animation ends.
-  // animation-play-state: play-state; // this determines whether the animation is playing or paused (paused, running).
-  &:hover {
-    animation-play-state: running;
-  }
-}
+// Long-Hand Syntax
+// animation-name: name; // this is the name of the animation, which is same name you create with @keyframes.
+// animation-duration: duration; // this is the duration of the animation. It is written in seconds as such 3s (3 seconds).
+// animation-timing-function: timing-function; // this is the timing-function used for the animation. It the same as transition-timing-function (linear, ease, ease-in, ease-out, ease-in-out, cubic-bezier)
+// animation-delay: duration; // this is the duration to wait (delay in seconds) before the animation starts. This delay is also applied every time the animation repeats.
+// animation-iteration-count: count; // this determines how many times the animation should repeat. If you want the animation to loop infinitely (until you say stop), use infinite.
+// animation-direction: direction; // this is the direction (normal, reverse, alternate, alternate-reverse) of the animation. normal: starts at 0% and ends at 100%, reverse: starts at 100% and ends at 0%, alternate: Every odd iteration starts at 0% and ends at 100%. Every even iteration starts at 100% and ends at 0%, alternate-reverse: Every odd iteration starts at 100% and ends at 0%; every even iteration starts at 0% and ends at 100%. // See this here: https://codepen.io/zellwk/pen/eGxBWP?editors=1100.
+// animation-fill-mode: fill-mode; // this tells CSS what to do when the animation ends.
+// animation-play-state: play-state; // this determines whether the animation is playing or paused (paused, running).
+
+// Wave hand when modal opens
+// .modal-is-open .wave-hand {
+//   transform-origin: bottom center;
+//   animation: zoom 0.5s cubic-bezier(0.18, 0.89, 0.32, 1.28),
+//     wave 1s 0.55s ease-in-out;
+// }
+
+// Wave hand on hover
+// .wave-hand {
+//   animation: wave 1s ease 1s 5 reverse paused;
+//   &:hover {
+//     animation-play-state: running;
+//   }
+// }
 
 /**
  * Modal
@@ -310,12 +355,13 @@ main {
   right: 0;
   opacity: 0;
   z-index: -1;
-  transition: opacity 0.5s ease-in;
+  transition: opacity 0.5s ease-in z-index 0s 3s linear;
   // transition: opacity 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .modal-is-open .modal-overlay {
   opacity: 1;
   z-index: 1;
+  transition-delay: 0s;
 }
 
 .modal {
@@ -330,24 +376,6 @@ main {
   min-height: 50vmin;
 }
 
-@keyframes wave {
-  0% {
-    transform: rotate(0deg);
-  }
-  25% {
-    transform: scale(1.1) rotate(-45deg);
-  }
-  50% {
-    transform: scale(1.3) rotate(45deg);
-  }
-  75% {
-    transform: scale(1.1) rotate(-45deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
-
 .modal__close-button {
   position: absolute;
   top: -1.5em;
@@ -355,22 +383,20 @@ main {
   padding: 1em 1em;
   font-size: 0.6em;
   border-radius: 50%;
-  border: 2px solid var(--blue-grey-400);
-  background: var(--blue-grey-400);
+  background: var(--magenta-300);
+  border: 2px solid var(--magenta-600);
   color: white;
-  opacity: 0;
+  transition: background 0.25s ease-in, border 0.25s ease-in;
 }
 
-.modal:hover .modal__close-button {
-  opacity: 1;
-}
+// .modal:hover .modal__close-button {
+// }
 
 .modal__close-button:hover,
 .modal__close-button:active,
 .modal__close-button:focus {
-  opacity: 1;
-  background: var(--magenta-300);
-  border-color: var(--magenta-600);
+  background: var(--magenta-900);
+  border-color: var(--magenta-100);
 }
 
 /**
@@ -526,6 +552,8 @@ main {
   position: relative;
   width: 100%;
   height: 100%;
+  transform: translateX(0);
+  transition: transform 0.3s ease-out;
 }
 
 .carousel__slide {
