--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -113,9 +113,11 @@
 }
 
 html {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-size: 125%;
-  font-family: "Roboto", sans-serif;
   line-height: 1.4;
+  font-weight: 400;
+  color: var(--blue-grey-900);
 }
 
 body {
@@ -134,7 +136,7 @@ body {
 h1 {
   margin-top: 3rem;
   margin-bottom: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.25;
 }
 
@@ -1312,4 +1314,142 @@ main {
   display: block;
   flex-grow: 1;
   margin-right: 0.75em;
+}
+
+form {
+  margin-top: 1.5em;
+}
+
+.input label {
+  display: block;
+}
+
+.input label + input {
+  margin-top: 0.25em;
+  max-width: 14rem;
+}
+
+input {
+  padding: 0.5em 0.75em;
+  border-radius: 6px;
+  background-color: var(--blue-grey-050);
+}
+
+input:focus,
+input.datepicker-opened {
+  outline: none;
+  background: white;
+}
+
+input::placeholder {
+  color: var(--blue-grey-500);
+}
+
+/*******************
+ * Datepicker
+ *******************/
+.datepicker {
+  --horizontal-padding: 1.5em;
+  --border-size: 1px;
+  position: absolute;
+  padding: var(--horizontal-padding);
+  border-radius: 8px;
+  background: white;
+  box-shadow: 0 3px 6px hsla(0, 0%, 0%, 0.15), 0 2px 4px hsla(0, 0%, 0%, 0.12);
+}
+
+/*******************
+ * Previous / Next buttons
+ *******************/
+.datepicker .datepicker__previous,
+.datepicker .datepicker__next {
+  position: absolute;
+  padding: 0;
+  color: var(--blue-grey-700);
+  border: 0;
+}
+
+.datepicker__previous svg,
+.datepicker__next svg {
+  height: auto;
+  width: 1.5em;
+}
+
+.datepicker__previous {
+  left: 1.85em;
+}
+
+.datepicker__next {
+  right: 1.85em;
+}
+
+/*******************
+ * Calendar
+ *******************/
+.datepicker__year-month {
+  color: var(--blue-grey-700);
+  text-align: center;
+  font-weight: 500;
+}
+
+.datepicker__day-of-week,
+.datepicker__date-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.datepicker__day-of-week {
+  --font-size: 0.7;
+  margin-top: calc(1 / var(--font-size) * 1.25em);
+  color: var(--blue-grey-400);
+  font-size: calc(var(--fz) * 1em);
+  font-weight: 500;
+  font-feature-settings: "smcp" 1;
+  letter-spacing: 0.1em;
+}
+
+.datepicker__day-of-week > * {
+  text-align: center;
+}
+
+/*******************
+ * Date grid
+ *******************/
+.datepicker__date-grid {
+  margin-top: 0.5em;
+}
+
+/* Positioning the dates */
+.datepicker__date-grid button:first-child {
+  //grid-column: 6;
+  grid-column: var(--firstDayOfMonth);
+}
+
+.datepicker__date-grid button {
+  position: relative;
+  border: 0;
+  width: 4.5ch;
+  height: 4.5ch;
+  padding: 0;
+  border-radius: 50%;
+  background-color: transparent;
+  color: var(--blue-grey-600);
+}
+
+.datepicker__date-grid button[start-date] {
+  color: var(--yellow-700);
+  background-color: var(--yellow-100);
+}
+
+.datepicker__date-grid button:hover,
+.datepicker__date-grid button:focus {
+  outline: none;
+  background-color: var(--blue-grey-050);
+  color: var(--blue-grey-700);
+}
+
+.datepicker__date-grid button:active,
+.datepicker__date-grid button.is-selected {
+  background-color: var(--teal-100);
+  color: var(--teal-900);
 }
